# flask-auth-tutorial

./: .env.dev  .gitignore  Pipfile  README.md  docker-compose.prod.yml  docker-compose.yml  requirements.txt  setup.py
app/: __init__.py  flask-auth.sqlite  models.py
app/account/: forms.py  token.py  views.py
app/account/templates/: show_account.html
app/admin/: views.py
app/admin/templates/: all_gigs.html
app/auth/: forms.py  views.py
app/auth/templates/: login.html  register.html
app/gig/: forms.py  views.py
app/gig/templates/: show_gig.html
app/main/: views.py
app/templates/: _error_messages.html  base.html
migrations/versions/: 256e1068c521_add_gigs.py  8663c739b8d7_add_musician_applications_to_gig.py  8cfc72716333_adding_account_activation.py  e6bd3297e2c8_add_user_roles.py
services/nginx/: nginx.conf
services/web/: Dockerfile  Dockerfile.prod  manage.py  pyproject.toml  requirements.txt
services/web/app/: __init__.py  flask-auth.sqlite  models.py
services/web/app/account/: views.py
services/web/app/admin/: views.py
services/web/app/admin/templates/: all_users.html
services/web/app/auth/: forms.py  views.py
services/web/app/gig/: views.py
services/web/app/gig/templates/: _gig.html  show_gig.html
services/web/app/main/: views.py
services/web/app/main/templates/home/: _landing.html
services/web/app/templates/: base.html
services/web/migrations/versions/: 2bf843bdd622_add_index_to_slug_in_gig.py  b968f779733d_add_remember_hashes.py  d8d91197d7d9_.py
services/web/tests/unit/: test_users_model.py
(+6 files in other folders)
