[tool.poetry]
name = "wizard-clock"
version = "0.1.0"
description = "Web backend of a wizard clock"
authors = ["Tom Sitter <thomas.sitter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
python-slugify = "^5.0.2"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
Flask-WTF = "^1.0.0"
Flask-Mail = "^0.9.1"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
